Cater for proxy users (#556)